--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                     <p class="section__subtitle">Estamos aquí para ayudarte con tus necesidades logísticas</p>
                 </div>
 
-                <div class="contact__content">
+                <!-- <div class="contact__content"> -->
                     <div class="contact__info">
                         <div class="contact__card">
                             <div class="contact__icon">
@@ -370,7 +370,7 @@
                                 <h3 class="contact__title">Teléfono</h3>
                                 <p class="contact__text">+34 917467197</p>
                                 <p class="contact__text">+34 610527003</p>
-                                <a href="tel:+525512345678" class="contact__button">
+                                <a href="tel:+34 917467197" class="contact__button">
                                     <i class="fas fa-phone"></i> Llamar Ahora
                                 </a>
                             </div>
@@ -413,15 +413,15 @@
                             <div class="contact__details">
                                 <h3 class="contact__title">Soporte 24/7</h3>
                                 <p class="contact__text">Emergencias y rastreo</p>
-                                <p class="contact__text">+34 649882910</p>
-                                <a href="tel:+34649882910" class="contact__button">
+                                <p class="contact__text">+34 610527003</p>
+                                <a href="tel:+34610527003" class="contact__button">
                                     <i class="fas fa-headset"></i> Soporte
                                 </a>
                             </div>
                         </div>
                     </div>
 
-                    <div class="contact__form-container">
+                    <!-- <div class="contact__form-container">
                         <form class="contact__form" id="contact-form">
                             <h3 class="contact__form-title">Solicita una Cotización</h3>
 
@@ -465,8 +465,8 @@
                                 Enviar Solicitud
                             </button>
                         </form>
-                    </div>
-                </div>
+                    </div> -->
+                <!-- </div> -->
             </div>
         </section>
     </main>
@@ -485,11 +485,9 @@
                         en el mercado nacional e internacional.
                     </p>
                     <div class="footer__social">
-                        <a href="#" class="footer__social-link" aria-label="Facebook">
+                        <a href="https://www.facebook.com/p/Tnl-Servicios-y-Log%C3%ADstica-SL-100057504246809/?locale=es_ES" 
+                        class="footer__social-link" aria-label="Facebook">
                             <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="#" class="footer__social-link" aria-label="Twitter">
-                            <i class="fab fa-twitter"></i>
                         </a>
                         <a href="#" class="footer__social-link" aria-label="LinkedIn">
                             <i class="fab fa-linkedin-in"></i>
@@ -543,10 +541,7 @@
 
             <div class="footer__bottom">
                 <p class="footer__copy">
-                    &copy; 2024 TNL. Todos los derechos reservados.
-                </p>
-                <p class="footer__credits">
-                    Diseñado con <i class="fas fa-heart"></i> para la excelencia logística
+                    &copy; 2025 TNL. Todos los derechos reservados.
                 </p>
             </div>
         </div>
