Last revision of the day

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         Soluciones Logísticas <span class="hero__title-accent">Aeroportuarias Integrales</span>
                     </h1>
                     <p class="hero__description">
-                        Líderes en transporte especializado, logística internacional y servicios aeroportuarios con más
+                        Líderes en transporte especializado, logística nacional y servicios aeroportuarios con más
                         de 50 años de experiencia en el mercado.
                     </p>
                     <div class="hero__buttons">
@@ -155,9 +155,24 @@
                             garantizando la cadena de frío desde origen hasta destino.
                         </p>
                         <ul class="service__features">
-                            <li><i class="fas fa-check"></i> Monitoreo en tiempo real</li>
+                            <li><i class="fas fa-check"></i> Monitoreo en tiempo realyy</li>
                             <li><i class="fas fa-check"></i> Certificaciones sanitarias</li>
                             <li><i class="fas fa-check"></i> Flota especializada</li>
+                        </ul>
+                    </div>
+
+                    <div class="service__card">
+                        <div class="service__icon">
+                            <i class="fas fa-capsules"></i>
+                        </div>
+                        <h3 class="service__title">Distribución de Médicamentos para uso Humano</h3>
+                        <p class="service__description">
+                            Expertos en la distribución de productos farmacéuticos, con camiones con control de temperatura
+                        </p>
+                        <ul class="service__features">
+                            <li><i class="fas fa-check"></i> Certificación GDP</li>
+                            <li><i class="fas fa-check"></i> Experiencia con multinacionales</li>
+                            <li><i class="fas fa-check"></i> Camiones con control de temperatura</li>
                         </ul>
                     </div>
 
@@ -183,8 +198,8 @@
                         </div>
                         <h3 class="service__title">Operaciones Aeroportuarias</h3>
                         <p class="service__description">
-                            Servicios especializados en operaciones aeroportuarias, incluyendo manejo de carga,
-                            almacenamiento y coordinación de vuelos comerciales.
+                            Servicios especializados en operaciones aeroportuarias, incluyendo manejo de carga y
+                            almacenamiento.
                         </p>
                         <ul class="service__features">
                             <li><i class="fas fa-check"></i> Manejo especializado</li>
@@ -197,33 +212,19 @@
                         <div class="service__icon">
                             <i class="fas fa-file-contract"></i>
                         </div>
-                        <h3 class="service__title">Gestión Aduanal y Documentación</h3>
+                        <h3 class="service__title">Gestión Aduanero y Documentación</h3>
                         <p class="service__description">
-                            Asesoría completa en trámites aduanales, documentación internacional y cumplimiento
+                            Asesoría completa en trámites aduaneros, documentación internacional y cumplimiento
                             de regulaciones comerciales.
                         </p>
                         <ul class="service__features">
-                            <li><i class="fas fa-check"></i> Trámites aduanales</li>
+                            <li><i class="fas fa-check"></i> Trámites aduanero</li>
                             <li><i class="fas fa-check"></i> Asesoría legal</li>
                             <li><i class="fas fa-check"></i> Documentación completa</li>
                         </ul>
                     </div>
 
-                    <div class="service__card">
-                        <div class="service__icon">
-                            <i class="fas fa-lock"></i>
-                        </div>
-                        <h3 class="service__title">Rastreo Satelital de Envíos</h3>
-                        <p class="service__description">
-                            Sistema avanzado de rastreo satelital que permite monitorear en tiempo real la ubicación
-                            y estado de sus envíos las 24 horas del día.
-                        </p>
-                        <ul class="service__features">
-                            <li><i class="fas fa-check"></i> Rastreo en tiempo real</li>
-                            <li><i class="fas fa-check"></i> Alertas automáticas</li>
-                            <li><i class="fas fa-check"></i> Reportes detallados</li>
-                        </ul>
-                    </div>
+                    
 
                     <div class="service__card">
                         <div class="service__icon">
@@ -369,7 +370,6 @@
                             <div class="contact__details">
                                 <h3 class="contact__title">Teléfono</h3>
                                 <p class="contact__text">+34 917467197</p>
-                                <p class="contact__text">+34 610527003</p>
                                 <a href="tel:+34 917467197" class="contact__button">
                                     <i class="fas fa-phone"></i> Llamar Ahora
                                 </a>
