Add SEO and correct thins

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
                         </a>
                     </div>
                 </div>
-                <div style="width: 640px; margin: auto; border: 1px solid #ccc; padding: 10px;">
+                <!-- <div style="width: 640px; margin: auto; border: 1px solid #ccc; padding: 10px;">
                     <video width="100%" controls>
                         <source src="assets/VideoPresentacion.mp4" type="video/mp4">
                         Tu navegador no soporta el video.
                     </video>
-                </div>
+                </div> -->
                 <div class="hero__image">
                     <img src="assets/hero-logistics.jpg" alt="Servicios de Logística" class="hero__img">
                 </div>
