--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </video>
                 </div> -->
                 <div class="hero__image">
-                    <img src="assets/hero-logistics.jpg" alt="Servicios de Logística" class="hero__img">
+                    <img src="assets/ImagenNave.jpg" alt="Servicios de Logística" class="hero__img">
                 </div>
             </div>
         </section>
@@ -140,7 +140,7 @@
                     </div>
 
                     <div class="about__image">
-                        <img src="assets/about-us.jpg" alt="Equipo TNL" class="about__img">
+                        <img src="assets/ImagenOficina.jpg" alt="Equipo TNL" class="about__img">
                     </div>
                 </div>
             </div>
@@ -511,7 +511,6 @@
                     <h3 class="footer__title">Servicios</h3>
                     <ul class="footer__list">
                         <li><a href="#servicios" class="footer__link">Transporte Controlado</a></li>
-                        <li><a href="#servicios" class="footer__link">Logística Internacional</a></li>
                         <li><a href="#servicios" class="footer__link">Operaciones Aeroportuarias</a></li>
                         <li><a href="#servicios" class="footer__link">Gestión Aduanal</a></li>
                         <li><a href="#servicios" class="footer__link">Rastreo Satelital</a></li>
