--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
                 <div class="gallery__grid">
                     <div class="gallery__item">
-                        <img src="assets/gallery-1.jpg" alt="Flota de transporte" class="gallery__img">
+                        <img src="assets/ImagenCamionGrandeControlTemperatura.jpg" alt="Flota de transporte" class="gallery__img">
                         <div class="gallery__overlay">
                             <h3 class="gallery__title">Flota Especializada</h3>
                             <p class="gallery__description">Vehículos con temperatura controlada</p>
@@ -272,7 +272,7 @@
                     </div>
 
                     <div class="gallery__item">
-                        <img src="assets/gallery-2.jpg" alt="Almacén logístico" class="gallery__img">
+                        <img src="assets/ImagenContenedorControlTemperatura.jpg" alt="Almacén logístico" class="gallery__img">
                         <div class="gallery__overlay">
                             <h3 class="gallery__title">Almacenes Modernos</h3>
                             <p class="gallery__description">Instalaciones de última generación</p>
@@ -280,7 +280,7 @@
                     </div>
 
                     <div class="gallery__item">
-                        <img src="assets/gallery-3.jpg" alt="Operaciones aeroportuarias" class="gallery__img">
+                        <img src="assets/BarajasAvion.jfif" alt="Operaciones aeroportuarias" class="gallery__img">
                         <div class="gallery__overlay">
                             <h3 class="gallery__title">Operaciones Aeroportuarias</h3>
                             <p class="gallery__description">Manejo especializado de carga aérea</p>
@@ -288,15 +288,15 @@
                     </div>
 
                     <div class="gallery__item">
-                        <img src="assets/gallery-4.jpg" alt="Centro de control" class="gallery__img">
+                        <img src="assets/ImagenOficina.jpg" alt="Centro de control" class="gallery__img">
                         <div class="gallery__overlay">
                             <h3 class="gallery__title">Centro de Control</h3>
-                            <p class="gallery__description">Monitoreo 24/7 de operaciones</p>
+                            <p class="gallery__description">Monitoreo de operaciones</p>
                         </div>
                     </div>
 
                     <div class="gallery__item">
-                        <img src="assets/gallery-5.jpg" alt="Equipo de trabajo" class="gallery__img">
+                        <img src="assets/ImagenNave.jpg" alt="Equipo de trabajo" class="gallery__img">
                         <div class="gallery__overlay">
                             <h3 class="gallery__title">Equipo Profesional</h3>
                             <p class="gallery__description">Personal altamente capacitado</p>
@@ -304,10 +304,10 @@
                     </div>
 
                     <div class="gallery__item">
-                        <img src="assets/gallery-6.jpg" alt="Tecnología avanzada" class="gallery__img">
+                        <img src="assets/ImagenTiposCarretillas.jpg" alt="Tecnología avanzada" class="gallery__img">
                         <div class="gallery__overlay">
-                            <h3 class="gallery__title">Tecnología Avanzada</h3>
-                            <p class="gallery__description">Sistemas de rastreo satelital</p>
+                            <h3 class="gallery__title">Inversión en confiabilidad</h3>
+                            <p class="gallery__description">Todo tipo de ayudas de Almacén</p>
                         </div>
                     </div>
                 </div>
@@ -377,8 +377,8 @@
                             <i class="fas fa-phone"></i>
                         </div>
                         <div class="contact__details">
-                            <h3 class="contact__title">Teléfono</h3>
-                            <p class="contact__text">+34 917467197</p>
+                            <h3 class="contact__title">Teléfono </h3>
+                            <p class="contact__text"> Horario de Atención <br> Lunes a Viernes <br> 8:30 AM - 5:30 PM <br> +34 917467197</p>
                             <a href="tel:+34 917467197" class="contact__button">
                                 <i class="fas fa-phone"></i> Llamar Ahora
                             </a>
@@ -392,7 +392,7 @@
                         <div class="contact__details">
                             <!-- TODO -->
                             <h3 class="contact__title">Correo Electrónico</h3>
-                            <p class="contact__text">tnlservicios@tnlservicios.com</p>
+                            <p class="contact__text">tnlservicios@tnlservicios.com <br> tnlfacturacion@tnlservicios.com <br> tnlnacional@tnlservicios.com</p>
                             <a href="mailto:tnlservicios@tnlservicios.com" class="contact__button">
                                 <i class="fas fa-envelope"></i> Enviar Email
                             </a>
