Fix footer and remove image

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             <div class="footer__content">
                 <div class="footer__section">
                     <div class="footer__logo">
-                        <img src="assets/logo.png" alt="TNL Logo" class="footer__logo-img">
+                        <!-- <img src="assets/logo.png" alt="TNL Logo" class="footer__logo-img"> -->
                         <span class="footer__logo-text">TNL</span>
                     </div>
                     <p class="footer__description">
@@ -513,7 +513,7 @@
                         <li><a href="#servicios" class="footer__link">Transporte Controlado</a></li>
                         <li><a href="#servicios" class="footer__link">Operaciones Aeroportuarias</a></li>
                         <li><a href="#servicios" class="footer__link">Gestión Aduanal</a></li>
-                        <li><a href="#servicios" class="footer__link">Rastreo Satelital</a></li>
+                        <li><a href="#servicios" class="footer__link">Distribución de Médicamentos para uso Humano</a></li> 
                     </ul>
                 </div>
 
@@ -522,9 +522,9 @@
                     <ul class="footer__list">
                         <li><a href="#nosotros" class="footer__link">Quiénes Somos</a></li>
                         <li><a href="#galeria" class="footer__link">Galería</a></li>
-                        <li><a href="#contacto" class="footer__link">Contacto</a></li>
-                        <li><a href="#" class="footer__link">Política de Privacidad</a></li>
-                        <li><a href="#" class="footer__link">Términos y Condiciones</a></li>
+                        <li><a href="#contacto" class="footer__link">Contacto</a></li>                        
+                        <!-- <li><a href="#" class="footer__link">Política de Privacidad</a></li>
+                        <li><a href="#" class="footer__link">Términos y Condiciones</a></li> -->
                     </ul>
                 </div>
 
